--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,6 @@ services:
     volumes:
       - .:/app
       - /app/node_modules
-    command: ng serve
+    command: npm start
     ports:
       - "4200:4200"
