--- a/package.json
+++ b/package.json
@@ -1,52 +1,52 @@
 {
-  "name": "namuraid",
-  "version": "0.0.0",
-  "license": "MIT",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve --host 0.0.0.0",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^4.1.3",
-    "@angular/common": "^4.1.3",
-    "@angular/compiler": "^4.1.3",
-    "@angular/compiler-cli": "^4.1.3",
-    "@angular/core": "^4.1.3",
-    "@angular/forms": "^4.1.3",
-    "@angular/http": "^4.1.3",
-    "@angular/material": "^2.0.0-beta.6",
-    "@angular/platform-browser": "^4.1.3",
-    "@angular/platform-browser-dynamic": "^4.1.3",
-    "@angular/platform-server": "^4.1.3",
-    "@angular/router": "^4.1.3",
-    "core-js": "^2.4.1",
-    "phoenix": "^1.2.1",
-    "rxjs": "^5.1.0",
-    "typescript": "^2.2.2",
-    "zone.js": "^0.8.5"
-  },
-  "devDependencies": {
-    "@angular/cli": "1.1.0",
-    "@angular/compiler-cli": "^4.1.3",
-    "@types/jasmine": "2.5.47",
-    "@types/node": "^7.0.12",
-    "codelyzer": "~2.1.1",
-    "jasmine-core": "~2.5.2",
-    "jasmine-spec-reporter": "~3.2.0",
-    "karma": "~1.6.0",
-    "karma-chrome-launcher": "~2.0.0",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.0.0",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.0",
-    "ts-node": "~3.0.2",
-    "tslint": "~5.0.0",
-    "typescript": "~2.2.2"
-  }
+    "name": "namuraid",
+    "version": "0.0.0",
+    "license": "MIT",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve --host 0.0.0.0 --disable-host-check",
+        "build": "ng build",
+        "test": "ng test",
+        "lint": "ng lint",
+        "e2e": "ng e2e"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "^4.1.3",
+        "@angular/common": "^4.1.3",
+        "@angular/compiler": "^4.1.3",
+        "@angular/compiler-cli": "^4.1.3",
+        "@angular/core": "^4.1.3",
+        "@angular/forms": "^4.1.3",
+        "@angular/http": "^4.1.3",
+        "@angular/material": "^2.0.0-beta.6",
+        "@angular/platform-browser": "^4.1.3",
+        "@angular/platform-browser-dynamic": "^4.1.3",
+        "@angular/platform-server": "^4.1.3",
+        "@angular/router": "^4.1.3",
+        "core-js": "^2.4.1",
+        "phoenix": "^1.2.1",
+        "rxjs": "^5.1.0",
+        "typescript": "^2.2.2",
+        "zone.js": "^0.8.5"
+    },
+    "devDependencies": {
+        "@angular/cli": "1.1.0",
+        "@angular/compiler-cli": "^4.1.3",
+        "@types/jasmine": "2.5.47",
+        "@types/node": "^7.0.12",
+        "codelyzer": "~2.1.1",
+        "jasmine-core": "~2.5.2",
+        "jasmine-spec-reporter": "~3.2.0",
+        "karma": "~1.6.0",
+        "karma-chrome-launcher": "~2.0.0",
+        "karma-cli": "~1.0.1",
+        "karma-coverage-istanbul-reporter": "^1.0.0",
+        "karma-jasmine": "~1.1.0",
+        "karma-jasmine-html-reporter": "^0.2.2",
+        "protractor": "~5.1.0",
+        "ts-node": "~3.0.2",
+        "tslint": "~5.0.0",
+        "typescript": "~2.2.2"
+    }
 }
